--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/debabratasahu30/MorningNewsExpress.git",
+  "homepage": "https://debabratasahu30.github.io/MorningNewsExpress",
   "name": "morningexpress-app",
   "version": "0.1.0",
   "private": true,
